Actions
Bug #7575
closedmdb autoformatter emits an unexpected leading \n when printing large, formatted strings
Start date:
2016-11-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
Added code to check large, formatted strings for an embedded \n to suppress the leading \n if it is not needed.
Updated by Electric Monk over 5 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 218912f6649942e736d5234e96f1a5c6367713d1
commit 218912f6649942e736d5234e96f1a5c6367713d1 Author: Steve Gonczi <steve.gonczi@delphix.com> Date: 2016-11-26T19:36:58.000Z 7575 mdb autoformatter emits an unexpected leading \n when printing large, formatted strings Reviewed by: Pavel Zakharov <pavel.zakharov@delphix.com> Reviewed by: Matthew Ahrens <mahrens@delphix.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions